--- a/package.json
+++ b/package.json
@@ -6,12 +6,19 @@
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
+		"aphrodite": "^2.4.0",
+		"get-random-emoji": "^1.0.0",
+		"moment": "^2.29.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-icons": "^4.3.1",
 		"react-qr-reader": "^2.2.1",
 		"react-scripts": "4.0.3",
+		"react-timer-hook": "^3.0.5",
 		"react-toastify": "^8.1.0",
-		"web-vitals": "^1.0.1"
+		"socket.io-client": "^4.3.2",
+		"web-vitals": "^1.0.1",
+		"wireframe-ui": "https://github.com/qron/wireframe-ui.git"
 	},
 	"scripts": {
 		"start": "react-scripts start",
